@@ -1,3 +1,4 @@
-DIST mkgmap-r659-src.tar.gz 207123 RMD160 e3db87625c8a4b4fae6f89ddacdd5bb64833e136 SHA1 4d86fbfa7665a8d290e9a0100f1610268b30e4cc SHA256 59303013be3e27d9d137fd7973ae27c9bb90f43bcb0f0977194ef52ccab1267a
-EBUILD mkgmap-659.ebuild 899 RMD160 48ef03b81f636235bd9eb305468b22b1f3b1a390 SHA1 18410a1159bccc860b2d55a1cbfe2e4dbc5cfc01 SHA256 e141520e6d25e269dceea41405b313a79b614849800dbb320b349d297a8c5666
-MISC ChangeLog 328 RMD160 69bc0821d3f7627c09d411d0445cdee244b00a41 SHA1 2ca8074db3dac93dd68fba9da293d63f925c5fe1 SHA256 b6b2fef3647efe07a5f3412e9cb3c430e41fe452f8bcf04809d257a3fecd51a3
+DIST mkgmap-r958-src.tar.gz 321137 RMD160 5d937de155b29905fc5a6f1dea5ed6ac58d34fb5 SHA1 2ae795cf8083cc10f0e3289b4d55f7dab8a981df SHA256 1b6889bda9ff3c91aa67d4f9175c1f9ca70b9360a66e8033e1c13a9b4ee690e9
+EBUILD mkgmap-958.ebuild 790 RMD160 c98a720c7147e7d82112f267a369817bf868528e SHA1 451aa6daa005f8faf51a496ee1b279ef1c4832d3 SHA256 6e229be8dd8c6a0699b7d4be14f951c8e4fdebbdb77f1f6ec94927fb7b3327e2
+MISC ChangeLog 421 RMD160 80c447adf5ea9c0adeaa725aa4fd403cdeeb935c SHA1 e1c12941de9850b714e50a19b43b713583bec859 SHA256 dfee978a2ce8425490a5578555ac56cc673c6cb218faf7c3554e3d2dfddc44fd
+MISC metadata.xml 155 RMD160 fd746bb2de09e0076727f37ade1fb64f63af8469 SHA1 cf348f100a9c070637df096751aadb213dcfc303 SHA256 470d983a79ec78e77d5413bb72372bc89249a68818d941d3e34ce13dd10c4c36
