@@ -1,12 +1,12 @@
 # Copyright 1999-2009 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/sci-geosciences/mkgmap/mkgmap-653.ebuild,v 1.1 2009/07/28 01:01:28 hanno Exp $
+# $Header: $
 
 inherit java-pkg-2 java-ant-2
 
 DESCRIPTION="Tool to create garmin maps"
 HOMEPAGE="http://www.parabola.me.uk/mkgmap/"
-SRC_URI="http://www.parabola.me.uk/mkgmap/snapshots/${PN}-r${PV}-src.tar.gz"
+SRC_URI="http://www.mkgmap.org.uk/snapshots/${PN}-r${PV}-src.tar.gz"
 LICENSE="GPL-2"
 SLOT="0"
 KEYWORDS="~amd64 ~x86"
